@@ -649,6 +649,7 @@ wxMSW:
 - Fix handling of deleting directories in wxFileSystemWatcher (Eric Raijmakers).
 - Disable the use of new style wxDirDialog under Vista to work around a bug in
   its implementation under this system (jtrauntvein).
+- Fix wxExecute() keeping open too many thread handles for too long (dannchr).
 
 wxOSX:
 
